--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.5.0"
+    "react-native-svg": "^15.5.0",
+    "react-native-webview": "^13.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
