--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "moti": "^0.29.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.15.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
